# full-text-search

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/application/: CMakeLists.txt  macros.h  main.cxx
src/commons/: CMakeLists.txt  _abstractions.h  _indexstructs.h  abstractions.h  configurator.cxx  configurator.h  parser.cxx  parser.h  parser.test.cxx
src/fsp/: CMakeLists.txt  fsp.cxx  fsp.h  fsp.test.cxx
src/ft-indexer/: CMakeLists.txt  indexer.cxx  indexer.h  indexer.test.cxx
src/ft-searcher/: CMakeLists.txt  searcher.cxx  searcher.h  searcher.test.cxx
src/programs/: CMakeLists.txt  main.indexer.cxx  main.searcher.cxx
user/: .request_history  71b4f3  books.csv  config.xml  find.xml  minor.csv
